[package]
name = "netbench-driver"
version = "0.1.0"
authors = ["Cameron Bytheway <bythewc@amazon.com>"]
edition = "2018"

[features]
default = ["native-tls", "s2n-quic", "tcp"]
native-tls = ["openssl", "tokio-native-tls"]
tcp = []

[dependencies]
bytes = "1"
futures = "0.3"
mimalloc = { version = "0.1", default-features = false }
netbench = { version = "0.1", path = "../netbench" }
openssl = { version = "0.10", optional = true }
s2n-quic = { version = "1", path = "../../quic/s2n-quic", features = ["provider-tls-s2n"], optional = true }
s2n-quic-core = { version = "0.1", path = "../../quic/s2n-quic-core", features = ["testing"] }
structopt = "0.3"
tokio = { version = "1", features = ["net", "time"] }
tokio-native-tls = { version = "0.3", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Pin to this version until s2n-tls supports OpenSSL 3.0
# Build the vendored version to make it easy to test in dev
#
# NOTE: The version of the `openssl-sys` crate is not the same as OpenSSL itself.
#       Versions 1.0.1 - 3.0.0 are automatically discovered.
openssl-sys = { version = "<= 0.9.68", features = ["vendored"] }
